--- a/src/main/resources/com/example/ssp/hello-view.fxml
+++ b/src/main/resources/com/example/ssp/hello-view.fxml
@@ -1,16 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.ssp.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<VBox alignment="CENTER" maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ssp.HelloController">
+  <padding>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+  </padding>
+   <AnchorPane maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0">
+      <children>
+         <ImageView fitHeight="480.0" fitWidth="680.0" preserveRatio="true" smooth="false">
+            <image>
+               <Image url="@../../../Images/backgrnd.png" />
+            </image>
+         </ImageView>
+         <GridPane hgap="48.0" layoutX="128.0" layoutY="169.0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="96.0" prefWidth="96.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="96.0" prefWidth="96.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="96.0" prefWidth="96.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints minHeight="96.0" prefHeight="96.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../../Images/SchereNOL.png" />
+                  </image>
+               </ImageView>
+               <Button alignment="CENTER" layoutX="96.0" layoutY="96.0" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Schere" visible="false" />
+               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                  <image>
+                     <Image url="@../../../Images/RockNOL.png" />
+                  </image>
+               </ImageView>
+               <Button alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Stein" visible="false" GridPane.columnIndex="1" />
+               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+                  <image>
+                     <Image url="@../../../Images/PaperNOL.png" />
+                  </image>
+               </ImageView>
+               <Button alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Papier" visible="false" GridPane.columnIndex="2" />
+            </children>
+         </GridPane>
+         <ImageView fitHeight="87.0" fitWidth="168.0" layoutX="236.0" layoutY="349.0" preserveRatio="true" smooth="false">
+            <image>
+               <Image url="@../../../Images/PickNOH.png" />
+            </image>
+         </ImageView>
+         <Button layoutX="224.0" layoutY="333.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="192.0" visible="false" />
+         <ImageView fitHeight="64.0" fitWidth="69.0" layoutX="46.0" layoutY="359.0" preserveRatio="true" smooth="false">
+            <image>
+               <Image url="@../../../Images/coin.png" />
+            </image>
+         </ImageView>
+         <Label layoutX="128.0" layoutY="370.0" text="000">
+            <font>
+               <Font name="Verdana Bold" size="34.0" />
+            </font>
+         </Label>
+         <Label layoutX="361.0" layoutY="292.0" text="Your Pick: ">
+            <font>
+               <Font size="24.0" />
+            </font>
+         </Label>
+         <Label layoutX="110.0" layoutY="292.0" prefHeight="35.0" prefWidth="125.0" text="Enemy Pick:">
+            <font>
+               <Font size="24.0" />
+            </font>
+         </Label>
+      </children>
+   </AnchorPane>
 </VBox>
