--- a/src/main/resources/com/example/ssp/hello-view.fxml
+++ b/src/main/resources/com/example/ssp/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -18,12 +19,12 @@
   </padding>
    <AnchorPane maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0">
       <children>
-         <ImageView fitHeight="480.0" fitWidth="680.0" preserveRatio="true" smooth="false">
+         <ImageView fx:id="backgroundimg" fitHeight="480.0" fitWidth="680.0" preserveRatio="true" smooth="false">
             <image>
                <Image url="@../../../Images/backgrnd.png" />
             </image>
          </ImageView>
-         <GridPane hgap="48.0" layoutX="128.0" layoutY="169.0">
+         <GridPane hgap="48.0" layoutX="129.0" layoutY="177.0">
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" minWidth="96.0" prefWidth="96.0" />
              <ColumnConstraints hgrow="SOMETIMES" minWidth="96.0" prefWidth="96.0" />
@@ -33,32 +34,24 @@
              <RowConstraints minHeight="96.0" prefHeight="96.0" vgrow="SOMETIMES" />
            </rowConstraints>
             <children>
-               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@../../../Images/SchereNOL.png" />
-                  </image>
-               </ImageView>
-               <Button alignment="CENTER" layoutX="96.0" layoutY="96.0" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Schere" visible="false" />
-               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-                  <image>
-                     <Image url="@../../../Images/RockNOL.png" />
-                  </image>
-               </ImageView>
-               <Button alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Stein" visible="false" GridPane.columnIndex="1" />
-               <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
-                  <image>
-                     <Image url="@../../../Images/PaperNOL.png" />
-                  </image>
-               </ImageView>
-               <Button alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Papier" visible="false" GridPane.columnIndex="2" />
+               <Button fx:id="scissor" alignment="CENTER" layoutX="96.0" layoutY="96.0" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Schere" visible="false">
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor></Button>
+               <Button fx:id="rock" alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Stein" visible="false" GridPane.columnIndex="1">
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor></Button>
+               <Button fx:id="paper" alignment="CENTER" maxHeight="96.0" maxWidth="96.0" minHeight="96.0" minWidth="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="96.0" text="Papier" visible="false" GridPane.columnIndex="2">
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor></Button>
             </children>
          </GridPane>
-         <ImageView fitHeight="87.0" fitWidth="168.0" layoutX="236.0" layoutY="349.0" preserveRatio="true" smooth="false">
-            <image>
-               <Image url="@../../../Images/PickNOH.png" />
-            </image>
-         </ImageView>
-         <Button layoutX="224.0" layoutY="333.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="192.0" visible="false" />
+         <Button fx:id="select" layoutX="237.0" layoutY="351.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="168.0" visible="false">
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></Button>
          <ImageView fitHeight="64.0" fitWidth="69.0" layoutX="46.0" layoutY="359.0" preserveRatio="true" smooth="false">
             <image>
                <Image url="@../../../Images/coin.png" />
